--- a/templates/user_profile/personal_profile.html
+++ b/templates/user_profile/personal_profile.html
@@ -55,6 +55,9 @@
                 <h3>Начин на контакт:&nbsp{{ students.how_to_reach }}</h3>
 
             </form>
+            <a href="{% url 'change password' %}">
+                <button class="btn btn-primary btn-lg">Смяна на парола</button>
+            </a>
         </div>
     </div>
 
