--- a/templates/user_auth/sign-in.html
+++ b/templates/user_auth/sign-in.html
@@ -19,6 +19,9 @@
                 <input type="hidden" name="next" value="{{ next }}">
                 {% csrf_token %}
                 <button class="btn btn-primary btn-lg">Влез</button>
+                <a href="{% url 'password_reset' %}">
+                    <button class="btn btn-primary btn-lg">Забравена парола</button>
+                </a>
             </form>
         </center>
     </div>
