--- a/templates/employer/details_employer.html
+++ b/templates/employer/details_employer.html
@@ -5,8 +5,8 @@
     <br>
     <br>
     <div class="container" align="center">
-        <div class="col-md-6">
-            <img src="{{ employer_details.employer_photo }}" alt="" height="400" width="550">
+        <div class="col-md-6" style="max-height: border-box">
+            <img src="{{ employer_details.employer_photo }}" alt="" style="max-height: 350px">
         </div>
         <div class="col-md-6">
             <h2>{{ employer_details.employer_name }}</h2>
