--- a/templates/price/delete_price.html
+++ b/templates/price/delete_price.html
@@ -10,10 +10,11 @@
     <div class="container" align="center">
 
         <div>
-            <form method="post" action="{% url 'add employer' %}" style="{% static 'style.css' %}">
-                {{ form.as_p }}
+            <form method="post" action="{% url 'delete price' pk=delete_price.pk %}" style="{% static 'style.css' %}">
+
                 {% csrf_token %}
-                <button class="btn btn-primary btn-lg">Добави работодател</button>
+
+                <button type="submit" class="btn btn-primary btn-lg">Изтрий</button>
             </form>
         </div>
     </div>
