--- a/templates/job_offer/offers.html
+++ b/templates/job_offer/offers.html
@@ -1,30 +1,39 @@
-    {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% load placeholders %}
 
 {% block content %}
+    <br><br><br>
+    <h1 align="center">ОФЕРТИ</h1>
+    <br><br><br>
+    <div class="row">
+        {% for offer in page_obj %}
 
-    <h1>ОФЕРТИ</h1>
-    {% if offer_list %}
-        <div>
-            <ul>
-                {% for offer in offer_list %}
-                    <li style="display: inline-table; white-space: nowrap">
-                        <img src="{{ offer.offer_pic }}" alt="" width="200" height="200">
-                        <h2> {{ offer.job_position }} </h2>
-                        <h4> {{ offer.city }}, {{ offer.state }} </h4>
-                        <h4> ${{ offer.wage|floatformat:2 }}/hour, {{ offer.employer }}</h4>
-                        <h4> {{ offer.sponsor }}</h4>
+            <div class="col-md-3">
+                <img src="{{ offer.offer_pic }}" alt="" style="max-height: 150px">
+                <h2> {{ offer.job_position }} </h2>
+                <h4> {{ offer.city }}, {{ offer.state }} </h4>
+                <h4> ${{ offer.wage|floatformat:2 }}/hour, {{ offer.employer }}</h4>
+                <h4> {{ offer.sponsor }}</h4>
 
-                        <a href="{% url 'details offer' offer.pk %}">
-                            <button class="btn btn-primary btn-lg">Виж повече</button>
-                        </a>
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
-    {% else %}
-        <p>В момента няма налични оферти.</p>
-    {% endif %}
+                <a href="{% url 'details offer' offer.pk %}">
+                    <button class="btn btn-primary btn-lg">Виж повече</button>
+                </a>
+            </div>
+        {% endfor %}
+    </div>
+    <br><br><br>
+    <div class="row" align="center">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">First</a>
+            <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        {% endif %}
+        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">Next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+        {% endif %}
+    </div>
+
 
 {% endblock %}
