--- a/templates/price/edit_price.html
+++ b/templates/price/edit_price.html
@@ -10,10 +10,11 @@
     <div class="container" align="center">
 
         <div>
-            <form method="post" action="{% url 'add employer' %}" style="{% static 'style.css' %}">
+            <form method="post" action="{% url 'edit price' pk=edit_price.pk %}" style="{% static 'style.css' %}">
                 {{ form.as_p }}
                 {% csrf_token %}
-                <button class="btn btn-primary btn-lg">Добави работодател</button>
+                <button class="btn btn-primary btn-lg">Запази ценовия план</button>
+
             </form>
         </div>
     </div>
