--- a/templates/user_profile/personal_profile.html
+++ b/templates/user_profile/personal_profile.html
@@ -8,7 +8,7 @@
     <br>
     <div data-inline-type="">
         <div>
-            <a href="{% url 'edit profile' user.pk %}">
+            <a href="{% url 'edit profile' students.pk %}">
                 <button type="button" class="btn btn-primary btn-lg">Редактирай</button>
             </a>
         </div>
