--- a/templates/price/prices.html
+++ b/templates/price/prices.html
@@ -19,7 +19,7 @@
                         <h5> {{ price.description }} </h5>
 
                         <a href="{% url 'details price' pk=price.pk %}">
-                            <button class="btn btn-primary btn-lg">Опции</button>
+                            <button class="btn btn-primary btn-lg">Подробно</button>
                         </a>
 
                     </div>
