--- a/templates/user_profile/personal_profile.html
+++ b/templates/user_profile/personal_profile.html
@@ -7,57 +7,82 @@
     <br><br><br>
     <br>
     <div data-inline-type="">
-        <div>
-            <a href="{% url 'edit profile' students.pk %}">
-                <button type="button" class="btn btn-primary btn-lg">Редактирай</button>
-            </a>
+        <div class="row">
+            <div class="col-md-2">
+                <a href="{% url 'edit profile' students.pk %}">
+                    <button type="button" class="btn btn-primary btn-lg">Редактирай</button>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="{% url 'change password' %}">
+                    <button class="btn btn-primary btn-lg">Смяна на парола</button>
+                </a>
+            </div>
         </div>
+
         <div>
             <form style="text-align: justify-all" method="post"
                   action="{% url 'details profile' user.pk %}">
-                {% for field in fields %}
-                    <p>
-                        {{ field }}
-                    </p>
 
-                {% endfor %}
                 {% csrf_token %}
-                <h3>
-                    <label for='first_name'>Име:&nbsp</label>{{ students.first_name }}
-                    <label for='middle_name'>Презиме:&nbsp</label>{{ students.middle_name }}
-                    <label for='last_name'>Фамилия:&nbsp</label>{{ students.last_name }}
-                </h3>
+                <div class="row">
+                    <div class="col-md-4">
+                        <h3>
+                            <label for='first_name'>Име:&nbsp</label>{{ students.first_name }}<br>
+                            <label for='middle_name'>Презиме:&nbsp</label>{{ students.middle_name }}<br>
+                            <label for='last_name'>Фамилия:&nbsp</label>{{ students.last_name }}<br>
+                            <label for='bg_personal_number'>ЕГН:&nbsp</label>{{ students.bg_personal_number }}<br>
+                            <label for='date_of_birth'>Дата на раждане:&nbsp</label>{{ students.date_of_birth }}<br>
+                            <label for='place_of_birth'>Място на
+                                раждане:&nbsp</label>{{ students.place_of_birth }}<br>
+                            <label for='country_of_birth'>Държава на
+                                раждане:&nbsp</label>{{ students.country_of_birth }}<br>
+                            <label for='phone'>Телефон:&nbsp</label>{{ students.phone }}<br>
+                            <label for='email'>Е-mail:&nbsp</label>{{ students.email }}<br>
+                        </h3>
+                        <h3>
+                            <label for='nationality'>Националност:&nbsp</label>{{ students.nationality }}<br>
+                            <label for='id_passport_number'>Номер на
+                                паспорт:&nbsp</label>{{ students.id_passport_number }}<br>
+                            <label for='passport_date_of_issue'>Дата на
+                                издаване:&nbsp</label>{{ students.passport_date_of_issue }}<br>
+                            <label for='is_received_visa'>Има ли издадена виза:&nbsp</label>
+                            {% if students.is_received_visa %}
+                                Да
+                            {% else %}
+                                Не
+                            {% endif %}
+                            <br>
+                        </h3>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>
+                            <label for='university'>Университет:&nbsp</label>{{ students.university }}<br>
+                            <label for='year_of_education'>Курс:&nbsp</label>{{ students.year_of_education }}<br>
+                            <label for='is_fulltime_student'>Редовно записан/а:&nbsp</label>
+                            {% if students.is_fulltime_student %}
+                                Да
+                            {% else %}
+                                Не
+                            {% endif %}
+                            <br>
+                            <label for='foreign_university'>Чуждестранен
+                                университет:&nbsp</label>{{ students.foreign_university }}<br>
+                        </h3>
 
-                <h3>Националност:&nbsp{{ students.nationality }} ЕГН:&nbsp{{ students.bg_personal_number }}</h3>
-                <h3>Номер на паспорт:&nbsp{{ students.id_passport_number }} Дата на
-                    издаване:&nbsp{{ students.passport_date_of_issue }}</h3>
-                <h3>Има ли издадена виза:&nbsp
-                    {% if students.is_received_visa %}
-                        Да
-                    {% else %}
-                        Не
-                    {% endif %}</h3>
-                <h3>Телефон:&nbsp{{ students.phone }} Е-mail:&nbsp{{ students.email }}</h3>
-                <h3>Дата на раждане:&nbsp{{ students.date_of_birth }} Място на
-                    раждане:&nbsp{{ students.place_of_birth }}</h3>
-                <h3>Държава на раждане:&nbsp{{ students.country_of_birth }}</h3>
-                <h3>Университет:&nbsp{{ students.university }}</h3>
-                <h3>Курс:&nbsp{{ students.year_of_education }}</h3>
-                <h3>Редовно записан/а:&nbsp
-                    {% if students.is_fulltime_student %}
-                        Да
-                    {% else %}
-                        Не
-                    {% endif %}
-                </h3>
-                <h3>Чуждестранен университет:&nbsp{{ students.foreign_university }}</h3>
-                <h3>Предпочитания за работа:&nbsp{{ students.search_job_pref }}</h3>
-                <h3>Начин на контакт:&nbsp{{ students.how_to_reach }}</h3>
 
+                        <h3>
+                            <label for='search_job_pref'>Предпочитания за
+                                работа:&nbsp</label>{{ students.search_job_pref }}<br>
+                            <label for='how_to_reach'>Начин на контакт:&nbsp</label>{{ students.how_to_reach }}<br>
+                        </h3>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <img src="{{ students.visa_photo }}" alt="">
+                </div>
             </form>
-            <a href="{% url 'change password' %}">
-                <button class="btn btn-primary btn-lg">Смяна на парола</button>
-            </a>
+
         </div>
     </div>
 
