--- a/templates/base.html
+++ b/templates/base.html
@@ -36,9 +36,9 @@
                                                  height="71">
                                         </a>
                                         {% if user.is_authenticated %}
-                                        <h5>
-                                            Добре дошъл, {{ user }}.
-                                        </h5>
+                                            <h5>
+                                                Добре дошъл, {{ user }}.
+                                            </h5>
                                         {% endif %}
                                     </h2>
                                 </div>
@@ -134,19 +134,6 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="contact-form">
-                        <form action="#" method="post">
-                            <input type="text" placeholder="Name">
-                            <input type="email" placeholder="Email">
-                            <input type="text" placeholder="Subject">
-                            <textarea placeholder="Message"></textarea>
-                            <input type="submit" value="Send">
-                        </form>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <footer class="footer">
@@ -164,11 +151,18 @@
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-2">
                     <div class="icon">
-                        <p><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a><a href="#"><i
-                                class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-linkedin"
-                                                                                                aria-hidden="true"></i></a><a
-                                href="#"><i class="fa fa-behance" aria-hidden="true"></i></a><a href="#"><i
-                                class="fa fa-dribbble" aria-hidden="true"></i></a></p>
+                        <p>
+                            <a href="https://www.facebook.com/profile.php?id=100072235954652">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            </a>
+
+                        </p>
                     </div>
                 </div>
             </div>
