--- a/templates/index.html
+++ b/templates/index.html
@@ -14,21 +14,24 @@
                 <div class="item">
                     <h4>НИЕ СМЕ</h4>
                     <h2>AIM TRAVEL България</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                        Ipsum
-                        has
-                        <br>dummy text ever since the 1500s, Lorem Ipsum. </p>
-                    <button>GET STARTED</button>
+                    <p>Където реалния опит среща вашите интереси, <br>
+                        за да изберете най-изгодния за вас вариант!</p>
+                    <a href="{% url 'prices' %}">
+                        <button>ВИЖ ЦЕНИТЕ</button>
+                    </a>
                 </div>
                 <div class="item">
                     <h4>ЗАЩО ДА ИЗБЕРА</h4>
                     <h2>AIM TRAVEL</h2>
                     <p>Ще получиш информация от хора с реален опит със студентските бригади
                         <br> и партньорства с работодатели, сключени от първо лице!</p>
-                    <button>GET STARTED</button>
+                    <a href="{% url 'show additional services' %}">
+                        <button>ВИЖ ДОПЪЛНИТЕЛНИТЕ УСЛУГИ</button>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
+
 
 {% endblock %}
